--- a/public/index.css
+++ b/public/index.css
@@ -11,10 +11,10 @@
     width: 100%;
     height: 100vh;
     background-attachment: fixed;
-    /* background-image:linear-gradient(
+    background-image:linear-gradient(
         rgba(0, 0, 0, 0.3),
         rgba(0, 0, 0, 0.3)
-      ); */
+      );
       background: rgb(2,0,36);
 
       background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(0,0,0,1) 0%, rgba(3,37,74,1) 100%, rgba(0,0,0,1) 100%, rgba(0,0,0,1) 100%);
@@ -75,19 +75,20 @@ section {
     font-family: technopath;
 }
 
-.data {
+#app{
     height: 100vh;
    display: flex; 
    justify-content: center;
    align-items: center;
  
-    color: aliceblue;
+   
     
 
 }
-.text{
+#text{
     font-family: technopath;
     text-align: center;
-   
+    color: aliceblue;
     font-size: 3rem;
+    z-index: 10000;
 }
