--- a/public/index.css
+++ b/public/index.css
@@ -11,13 +11,13 @@
     width: 100%;
     height: 100vh;
     background-attachment: fixed;
-    background-image:linear-gradient(
+    /* background-image:linear-gradient(
         rgba(0, 0, 0, 0.3),
         rgba(0, 0, 0, 0.3)
       );
       background: rgb(2,0,36);
 
-      background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(0,0,0,1) 0%, rgba(3,37,74,1) 100%, rgba(0,0,0,1) 100%, rgba(0,0,0,1) 100%);
+      background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(0,0,0,1) 0%, rgba(3,37,74,1) 100%, rgba(0,0,0,1) 100%, rgba(0,0,0,1) 100%); */
 
 }
 
@@ -74,21 +74,47 @@ section {
 .navbar-brand {
     font-family: technopath;
 }
+body,html,#app{
+    margin: 0;
+    width: 100%;
+    height: 100%;
+}
 
 #app{
-    height: 100vh;
-   display: flex; 
-   justify-content: center;
-   align-items: center;
+   
+   height:100vh;
+   font-family: technopath;
+   text-align: center;
+   color: #ffffff;
+   touch-action: pan-up;
+   overflow: hidden;
+   text-shadow: 0 0 5px #ffffff, 0 0 20px #000, 0 0 30px #000;
  
    
     
 
 }
-#text{
-    font-family: technopath;
-    text-align: center;
-    color: aliceblue;
-    font-size: 3rem;
-    z-index: 10000;
+#app h1{
+    margin-top: 15%;
+  --fontSize:60px;
+  --lineHeight:80px;
+  width:auto;
+  height:calc(2*var(--lineHeight));
+  line-height: var(--lineHeight);
+  margin:calc(50vh-var(--lineHeight)) auto 0;
+  font-size: var(--fontSize);
+  text-transform: uppercase;
+   
+}
+#app canvas{
+    display: block;
+    position:fixed;
+    z-index: -1;
+    top:0;
+}
+#app a{
+    margin-top: 10px;
+    display: inline-block;
+    text-decoration: none;
+    color: #fff;
 }
