--- a/public/index.css
+++ b/public/index.css
@@ -96,7 +96,7 @@ body,html,#app{
 }
 #app h1{
     margin-top: 15%;
-  --fontSize:60px;
+  --fontSize:3rem;
   --lineHeight:80px;
   width:auto;
   height:calc(2*var(--lineHeight));
