--- a/public/vision.css
+++ b/public/vision.css
@@ -1,15 +1,23 @@
+*{
+    margin: 0;
+    padding: 0;
+    
+}
 #VM {
-    height: 100vh;
+    /* height: 100vh;
     width: 100vw;
     min-width: 100%;
-    min-height: 100vh;
+    min-height: 100vh; */
+    height: 100vh;
+    width:100%;
     background-color: black;
     color: white;
+    overflow-y: hidden;
 }
 
 @font-face {
     font-family: technopath;
-    src: url("fonts/Technopath.otf");
+    src: url(fonts/Technopath.otf);
 }
 
 @font-face {
@@ -24,12 +32,26 @@
 
 #visionheading1 {
     font-family: technopath;
-    display: flex;
-    justify-content: center;
-    font-size: 4rem;
-    color: black;
-    -webkit-text-stroke: 0.1px white;
+    /* display: flex;
+    justify-content: center; */
+    font-size: 7rem;
+    color:   linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(0,0,0,1) 0%, rgba(3,37,74,1) 100%, rgba(0,0,0,1) 100%, rgba(0,0,0,1) 100%);
+    /* #52E5E7
+    #130CB7; */
+    /* background-clip:text;
+    color: transparent; */
+    /* -webkit-text-stroke: 0.1px white; */
     margin: 0;
+    cursor:default;
+}
+.light{
+    position: fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:30%;
+    pointer-events: none;
+    background:radial-gradient(circle at var(--x) var(--y), transparent 5%,rgba(0,0,0,0.9) 20%) ;
 }
 
 #visionheading2 {
@@ -51,17 +73,19 @@
 
 #visionheading {
     padding-top: 5rem;
+    display: flex;
+    justify-content: center;
 }
 
 #visiontext {
     width: 80vw;
     padding: 0 10vw; /* Simplified padding for text */
     font-family: technical;
-    font-size: 1.2rem;
-    text-align: justify;
+    font-size: 1.5rem;
+    text-align: center;
     font-weight: 1;
     line-height: 2;
-    height: 100vh;
+    /* height: 100vh; */
     margin-top: 5vh
 }
 
