--- a/public/ritesh.css
+++ b/public/ritesh.css
@@ -2,13 +2,27 @@ body{
   margin: 0%;
   padding: 0%;
   background: #0F0F0F;
+  width: 100%;
+  height: inherit;
+  min-width: 40vw;
 }
 .center{
   display: flex;
   align-items: center;
   justify-content: center;
 }
-
+@font-face {
+  font-family: 'Pristina';
+  src: url('fonts/Pristina\ Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Technical Drawing';
+  src: url('fonts/TechnicalDrawing.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
 
 /* <!-- First Heading (Under the Guidance of)--> */
 
@@ -42,10 +56,50 @@ body{
 /* <!-- Faculty Information --> */
 .faculty{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(1.5rem, 40rem));
+    grid-template-columns: repeat(auto-fit, minmax(1rem, 32rem));
     justify-content: space-evenly;
     align-items: center;
-} 
+}
+/* Container to center the image and make it responsive */
+.responsive-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: auto;
+}
+
+/* Media Queries for specific adjustments */
+@media (max-width: 1200px) {
+  .responsive-image {
+    max-width: 80%;
+  }
+}
+
+@media (max-width: 992px) {
+  .responsive-image {
+    max-width: 70%;
+  }
+}
+
+@media (max-width: 768px) {
+  .responsive-image {
+    max-width: 60%;
+  }
+}
+
+@media (max-width: 576px) {
+  .responsive-image {
+    max-width: 50%;
+  }
+}
+
+@media (max-width: 400px) {
+  .responsive-image {
+    max-width: 40%;
+  }
+}
+
 /* <!-- Faculty Information --> */
 
 
@@ -60,7 +114,7 @@ body{
 
 <!-- Heading project animation --> */
 .font-size1{
-  font-size: 12rem;
+  font-size: 980%;
 }
 .gradient-text {
   background: linear-gradient(to right, #FFA566, #FF6E06);
@@ -141,13 +195,14 @@ body{
 }
 .text {
   color: white;
-  font-size: 20px;
+  font-size: 1.5rem;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
   text-shadow: rgb(255, 255, 255) 0.4px 0.4px 2px ;
+  font-family: Technical Drawing, regular;
 }
 
 /*Code Button*/
@@ -210,16 +265,16 @@ body{
 
 /* <!-- Explore All and Show less Button --> */
 .button {
-  line-height: 1;
+  line-height: 0;
   text-decoration: none;
   display: inline-flex;
   align-items: center;
-  gap: .75rem;
+  gap: .1rem;
   background-color: var(--clr);
   color: #fff;
-  border-radius: 2rem;
+  border-radius: 2.5rem;
   font-weight: 600;
-  padding: .75rem 1.5rem;
+  padding: .75rem 1rem;
   padding-left: 1rem;
   white-space: nowrap;
   overflow: hidden;
@@ -227,6 +282,9 @@ body{
   transition: background-color .3s;
 }
 
+.explore_btn_size{
+  font-family: "Poppins", sans-serif;
+}
 .button__icon-wrapper {
   flex-shrink: 0;
   width: 1.75rem;
@@ -271,3 +329,7 @@ body{
 
 
 /* <!-- (Project Section) -->
+
+
+
+/* //Flipping the image of faculty when hovered */
