--- a/public/baani.css
+++ b/public/baani.css
@@ -1,127 +1,16 @@
-* {
+*{
     margin: 0;
     padding: 0;
-    /* background-color: black; */
-
-
-
+    font-family: Poppins,sans-serif;
+    box-sizing: border-box;
 }
 
-.section1 {
-    width: 100%;
-    height: 100vh;
-    background-attachment: fixed;
-    /* background-image:linear-gradient(
-        rgba(0, 0, 0, 0.3),
-        rgba(0, 0, 0, 0.3)
-      );
-      background: rgb(2,0,36);
 
-      background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(0,0,0,1) 0%, rgba(3,37,74,1) 100%, rgba(0,0,0,1) 100%, rgba(0,0,0,1) 100%); */
-
-}
-
-section {
-    width: 100%;
-    height: 100vh;
-    background-image: url('pictures/cybernautsgif.gif');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: 100% 100%;
-
-}
 
 @font-face {
     font-family: technopath;
-    src: url(fonts/Technopath.otf);
+    src: url("fonts/Technopath.otf");
 }
-
-.navbar {
-    width: 100%;
-    height: 15%;
-    background-color: black;
-}
-
-.navbar .navbar-nav .nav-item a {
-    padding: 30px;
-
-}
-
-.nav-item {
-    font-size: 130%;
-    font-family: technopath;
-    margin-right: 5%;
-}
-
-.nav-link {
-    color: white !important;
-
-
-}
-.navbar-toggler {
-    color: white!important;
-}
-.navbar-toggler-icon{
-    color: aliceblue!important;
-    background-color: aliceblue;
-}
-
-.nav-link:hover {
-    color: rgb(218, 80, 167)!important;
-    ;
-}
-
-.navbar-brand {
-    font-family: technopath;
-}
-body,html,#app{
-    margin: 0;
-    width: 100%;
-    height: 100%;
-  
-}
-
-#app{
-   
-   height:100vh;
-   font-family: technopath;
-   text-align: center;
-   color: #ffffff;
-   touch-action: pan-up;
-   overflow: hidden;
-   text-shadow: 0 0 5px #ffffff, 0 0 20px #000, 0 0 30px #000;
- 
-   
-    
-
-}
-#app h1{
-    margin-top: 15%;
-  --fontSize:3rem;
-  --lineHeight:80px;
-  width:auto;
-  height:calc(2*var(--lineHeight));
-  line-height: var(--lineHeight);
-  margin:calc(50vh-var(--lineHeight)) auto 0;
-  font-size: var(--fontSize);
-  text-transform: uppercase;
-   
-}
-#app canvas{
-    display: block;
-    position:fixed;
-    z-index: -1;
-    top:0;
-}
-#app a{
-    margin-top: 10px;
-    display: inline-block;
-    text-decoration: none;
-    color: #fff;
-}
-
-
-/* events */
 @font-face {
     font-family: pristina;
     src: url("fonts/pristina.ttf");
@@ -828,507 +717,3 @@ body,html,#app{
         left: 3%;
     }
 }
-/* gallery********************************************************************* */
-.diyagallery{
-    height: auto;
-}
-.diya{
-    margin:0;
-    padding:0;
-    width:100%;
-    background-color: #000000;
-    /* overflow-y:hidden; */
-}
-.wholegallery{
-    overflow:hidden;
-    display:flex;
-    align-items:center; 
-    justify-content:center;
-    margin-top:2%;
-    height: 90vh;
-    margin-bottom: 2%;
-}
-
-.text32{
-    width:50%;
-    color:white;
-    font-family: Arial sans-serif;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    margin:2% 25%;
-}
-.of-past{
-    font-size:4em;
-    margin-top:4%;
-    margin-left:3%;
-}
-.glimpse{
-    font-size:4em;
-}
-.glimpse::first-letter{
-    font-size:1.5em;
-}
-.events{
-    font-size:0.8em;
-    font-style:italic;
-    text-align:right;
-}
-.scroll-container{
-    overflow:hidden;
-    width:30%; 
-    height:100%;
-}
-.scroll-content{
-    width:97%;
-    height:calc(50vh*6);
-    display:flex;
-    flex-direction: column;
-    flex-shrink:0;
-    overflow:hidden;
-    animation:scroll 10s linear infinite;
-    border:1px solid white
-}
-.scroll-content::before,
-.scroll-content::after{
-    background:linear-gradient(to bottom,rgba(0,0,0,0)0%,rgba(0,0,0,0)50%,rgba(0,0,0,0)100%);
-    content:'';
-    width:100%;
-    position:absolute;
-    z-index:2;
-    height:100%;
-}
-.slide img{
-    width:100%;
-    height:50vh;
-    object-fit:cover;
-}
-
-@keyframes scroll{
-    0%{
-        transform:translateY(0);
-    }
-    100%{
-        transform:translateY(-50%);
-    }
-}
-@media(max-width:768px){
-    .scroll-content img{
-        width:100%;
-    }
-    .text {
-        font-size: 1rem;
-        line-height: 1.3;
-      }
-}
-/*************************************** prefooter************************************ */
-.contact-us {
-    height: 100%;
-    width: 100%;
-    background-color: aqua;
-    display: flex;
-    padding: 2vw 4vw;
-  }
-  .left {
-    height: 65%;
-    width: 50%;
-    background-color: #0f0f0f;
-    display: flex;
-    padding-top: 3vw;
-  }
-  .left h2 {
-    font-size: 4.6vw;
-    line-height: 4.3vw;
-    text-transform: capitalize;
-    font-family: "Poppins";
-    font-weight: 600;
-    letter-spacing: -2px;
-  }
-  .right {
-    height: 65%;
-    width: 50%;
-    background-color: #0f0f0f;
-  }
-  .msg h5 {
-    color: #9e9e9e;
-    font-weight: 600;
-    font-size: 0.9vw;
-    padding-bottom: 0.7vw;
-  }
-  .email {
-    border: 1px white solid;
-    width: fit-content;
-    padding: 2px 9px;
-    border-radius: 50px;
-    font-size: 1.1vw;
-  }
-  .social h5 {
-    color: #9e9e9e;
-    font-weight: 600;
-    text-transform: uppercase;
-    font-size: 0.9vw;
-  }
-  .icons {
-    padding-top: 0.7vw;
-    display: flex;
-    gap: 1vw;
-  }
-  .icons h4 {
-    border: 1px white solid;
-    padding: 3px 15px;
-    border-radius: 50px;
-    text-transform: uppercase;
-    font-weight: 600;
-    font-size: 1.1vw;
-    transition: 0.5s;
-  }
-  .icons a {
-    text-decoration: none;
-  }
-  .icons h4:hover {
-    color: black;
-    background-color: white;
-    cursor: pointer;
-  }
-  .subscribe {
-    padding-top: 4vw;
-  }
-  .subscribe h3 {
-    font-weight: 600;
-    font-size: 1.2vw;
-  }
-  
-  .msg {
-    padding-top: 3vw;
-  }
-  .msg .email:hover {
-    cursor: pointer;
-  }
-  .social {
-    padding-top: 3vw;
-  }
-  .right {
-    display: flex;
-    flex-direction: column;
-    padding-left: 15vw;
-  }
-  .inputbox {
-    position: relative;
-    width: 275px;
-  }
-  
-  .inputbox input {
-    background: transparent;
-    width: 100%;
-    height: 30px;
-    color: white;
-    border: none;
-    outline: none;
-    box-shadow: none;
-    font-size: 17px;
-    letter-spacing: 1px;
-    padding: 10px 0 5px;
-    padding-bottom: 8px;
-  }
-  .inputbox span {
-    position: absolute;
-    left: 0;
-    padding: 2px 0 5px;
-    color: rgba(255, 255, 255, 0.5);
-    text-transform: uppercase;
-    pointer-events: none;
-    letter-spacing: 1px;
-    transition: 0.5s;
-  }
-  
-  .inputbox input:valid ~ span,
-  .inputbox input:focus ~ span {
-    color: #ffffff;
-    transform: translateY(-18px);
-    font-size: 11px;
-  }
-  
-  .inputbox i {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    background: #fff;
-    height: 2px;
-    width: 100%;
-    overflow: hidden;
-  }
-  .inputbox i::before {
-    content: "";
-    position: absolute;
-    left: -100%;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(90deg, #ff1b69, #ff0, #2196f3, #9c27b0, #ff1b69);
-    animation: animate-hoja 2s linear infinite;
-    transition: 0.5s;
-  }
-  inputbox input:valid ~ i::before,
-  .inputbox input:focus ~ i::before {
-    left: 0;
-  }
-  @keyframes animate-hoja {
-    0% {
-      background-position-x: 0;
-    }
-    100% {
-      background-position-x: 275px;
-    }
-  }
-  .left {
-    position: relative;
-  }
-  .chotu {
-    background-color: red;
-    height: 7vw;
-    width: 7vw;
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    z-index: 99;
-    transform: scale(0);
-    transform-origin: center;
-    pointer-events: none;
-  }
-  .ani {
-    /* background-color: yellow; */
-    cursor: pointer;
-    height: fit-content;
-    width: fit-content;
-    overflow: hidden;
-    display: inline-block;
-    height: fit-content;
-  }
-   .prefooter{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    color: white;
-    font-family: "Poppins";
-    height: auto;
-  }
-  *::selection {
-    color: black;
-    background-color: white;
-  }
-
-/******************************footer********************************* */
-.footer11{
-    height: auto;
-}
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  *::selection {
-    background-color: white;
-    color: black;
-  }
-  @font-face {
-    font-family: Techi;
-    src: url(TechnicalDrawing.ttf);
-  }
-  
- 
-  footer {
-    background-color: #111110;
-    height: 56%;
-  }
-  
-  #imgpara {
-    width: 30vw;
-    /* height: 30vw; */
-    margin-left: 4vw;
-    margin-top: 3.2vw;
-    float: left;
-  }
-  #img {
-    background-image: url(Cybernauts.jpeg);
-    width: 5.7vw;
-    height: 5.7vw;
-    background-size: contain;
-    border-radius: 50%;
-  }
-  .logo {
-    display: flex;
-    align-items: center;
-    gap: 1vw;
-    text-transform: uppercase;
-    font-family: "Poppins";
-    font-size: 1.75vw;
-    color: white;
-    position: relative;
-  }
-  .logo i {
-    position: absolute;
-    z-index: -1;
-    /* left: 0; */
-    top: 25%;
-    transform: translate(-50%);
-    color: #9e9e9e;
-    opacity: 0.6;
-    font-size: 3vw;
-  }
-  .flame {
-    position: absolute;
-    bottom: -0.5vw;
-    left: 28%;
-    rotate: 45deg;
-    transform: translateX(-50%);
-    width: 1vw;
-    height: 2vw;
-    background: linear-gradient(to bottom, yellow, red);
-    border-radius: 20%;
-    animation: flame-animation 0.7s infinite alternate;
-    z-index: -1;
-  }
-  
-  @keyframes flame-animation {
-    from {
-      transform: translateX(-50%) scaleY(1);
-      opacity: 0.9;
-    }
-    to {
-      transform: translateX(-50%) scaleY(0.8);
-      opacity: 0.6;
-    }
-  }
-  .logo h3 {
-    font-weight: 500;
-    z-index: 1;
-  }
-  .logo span {
-    color: #d246d2;
-  }
-  
-  #para {
-    height: 7vw;
-    width: 22vw;
-    padding-top: 1.5vw;
-    color: #e5e7f6;
-    font-family: Poppins;
-    font-size: 0.9vw;
-  }
-  h5 {
-    color: #9e9e9e;
-    font-family: "Poppins";
-    font-size: 1.17vw;
-    font-weight: 600;
-    padding-bottom: 1vw;
-  }
-  #links2 h5 {
-    text-align: left;
-  }
-  #links3 h5 {
-    text-align: left;
-  }
-  #links1 {
-    /* width: 250px;
-      height: 450px; */
-  
-    float: left;
-    margin-top: 2vw;
-    margin-left: 6vw;
-    margin-right: 6vw;
-  }
-  
-  li {
-    list-style: none;
-    line-height: 3.7vw;
-    font-size: 1.05vw;
-    font-family: "Poppins";
-    color: #ffffff;
-    text-transform: capitalize;
-  }
-  #links1 li,
-  #links2 li {
-    text-align: left;
-    font-weight: 400;
-  }
-  #links2 {
-    /* width: 300px;
-      height: 450px; */
-  
-    float: left;
-    margin-top: 2vw;
-    margin-left: 6vw;
-    margin-right: 6vw;
-  }
-  
-  #links3 {
-    /* width: 200px;
-      height: 450px; */
-  
-    float: left;
-    margin-top: 2vw;
-    margin-left: 6vw;
-  }
-  #links3 li {
-    display: flex;
-    align-items: center;
-    /* justify-content: flex-start; */
-    gap: 2vw;
-  }
-  #links3 li i {
-    width: 2.5vw; /* Set a fixed width for the icons */
-    text-align: center; /* Center the icons within their width */
-  }
-  #links3 ul {
-    padding: 0;
-    list-style: none;
-  }
-  
-  #bottomline1 {
-    width: 70%;
-    /* height: 50px; */
-  
-    /* bottom: 120px;
-      position: absolute;
-      right: 250px; */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1vw;
-    color: #f1b2f2;
-    letter-spacing: 2.26px;
-    padding-top: 1.5vw;
-    font-family: "Techi";
-  }
-  #bottomline2 {
-    width: 500px;
-    /* height: 50px; */
-  
-    /* bottom: 20px;
-      position: absolute;
-      right: 530px; */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 0.8vw;
-    color: #ffffff;
-    padding-top: 1.7vw;
-    font-family: "Poppins";
-  }
-  .line {
-    height: 1px;
-    width: 92%;
-    background-color: rgba(125, 125, 125, 0.616);
-    color: white;
-    position: absolute;
-    left: 4%;
-    top: 51%;
-  }
-  #links3 i {
-    color: #d246d2;
-  }
-  #links3 i:hover {
-    scale: 1.1;
-    transition: 0.2s all ease;
-  }
