--- a/public/index.css
+++ b/public/index.css
@@ -146,6 +146,7 @@ body,html,#app{
     background-clip: text;
 
 } */
+
 .EVENT{
     color:white;
     font-size: 5rem;
@@ -183,6 +184,7 @@ body,html,#app{
 
 .events_body{
     background-color: #000000;
+    height: 100%;
     /* background-image:url("https://th.bing.com/th/id/OIP.zHWdMDu779X19_WehLagqwHaEK?rs=1&pid=ImgDetMain");
     background-repeat: no-repeat;
     background-size: cover; */
@@ -923,14 +925,14 @@ body,html,#app{
 .contact-us {
     height: 100%;
     width: 100%;
-    background-color: aqua;
+    background-color: black;
     display: flex;
     padding: 2vw 4vw;
   }
   .left {
     height: 65%;
     width: 50%;
-    background-color: #0f0f0f;
+    background-color: black;
     display: flex;
     padding-top: 3vw;
   }
@@ -945,7 +947,7 @@ body,html,#app{
   .right {
     height: 65%;
     width: 50%;
-    background-color: #0f0f0f;
+    background-color: black;
   }
   .msg h5 {
     color: #9e9e9e;
@@ -1330,3 +1332,4 @@ body,html,#app{
     scale: 1.1;
     transition: 0.2s all ease;
   }
+  
