--- a/public/arvind.css
+++ b/public/arvind.css
@@ -1,16 +1,6 @@
-.div1 {
-    height:5vh;
-    width: 100vw;
-   
-    color: white;
-  }
+
   
-  .div3 {
-    height: 50vh;
-    width: 100vw;
-   
-    color: white;
-  }
+  
   
   .div2 {
     display: flex;
@@ -76,11 +66,7 @@
   
   @import url("https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap");
   
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+  
   
   #headsection{
     min-height: 100vh;
@@ -144,7 +130,7 @@
   
   .heads .tokenImage {
     border-radius: .5rem;
-    max-width: 100%;
+    width: 100%;
     height: 250px;
     object-fit: cover;
   }
@@ -219,4 +205,126 @@
     top: -100%;
     left: 200%;
   }
+  .clubarrow{
+    cursor: pointer;
+  }
+  @media (max-width:1000px){
+    .clubarrow{
+     position: relative;
+     top: -20%;
+     left:90%;
+    }
+  }
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    color: white;
+  }
+  @font-face {
+    font-family: Pristina;
+    src: url(Fonts/PRISTINA.TTF);
+  }
+  @font-face {
+    font-family: technical;
+    src: url(Fonts/TechnicalDrawing.ttf);
+  }
   
+  .mid-sec {
+    padding-top: 3vw;
+    min-height: 100vh;
+    width: 100vw;
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .clubHead-1 {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    font-family: technopath;
+    font-size: 5rem;
+    line-height: 7.5rem;
+    padding-bottom: 8vw;
+    width: 100vw;
+  }
+  .clubHead-1 h1 {
+    font-weight: 500;
+  }
+  .clubHead-1 .p-the {
+    font-family: technical;
+    font-weight: 200;
+  }
+  .clubHead-1 .club {
+    font-style: italic;
+    font-family:technical ;
+    font-weight: 400;
+  }
+  .clubHead-2 {
+    padding-bottom: 2vw;
+    width: 100vw;
+  }
+  .clubHead-2 h2 {
+    text-transform: uppercase;
+    text-align: center;
+    font-family: technical;
+    font-weight: 400;
+    font-size: 3.2rem;
+    margin:0 20rem 0 20rem;
+    
+  }
+  .clubHead-img {
+    height: 100%;
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 5vw;
+  }
+  
+  .box {
+    height: 20vw;
+    width: 17svw;
+    background-color: yellow;
+  }
+  .moving {
+    /* background-color: red; */
+    width: 100%;
+    margin-bottom: 0vw;
+    white-space: nowrap;
+    padding: 1.3vw;
+    overflow: hidden;
+  }
+  .moving .fields {
+    display: inline-block;
+    animation: move-hoja;
+    animation-duration: 12s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    font-size: 3vw;
+    font-family: technical;
+  }
+  
+  .moving .fields span {
+    margin: 0 2.7vw;
+  }
+  
+  @keyframes move-hoja {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(-100%);
+    }
+  }
+  @media (max-width:1000px){
+    .clubHead-1 h1{
+      font-size: 3rem;
+      line-height: 3rem;
+    }
+    .clubHead-2 h2{
+      font-size: 1.5rem;
+      margin: 5%
+    }
+  }
