--- a/public/about.css
+++ b/public/about.css
@@ -8,7 +8,10 @@ html{
     margin: 0;
     padding: 0;
 }
-
+@font-face {
+    font-family: technical;
+    src: url(Fonts/TechnicalDrawing.ttf);
+  }
 .abouttext {
     width: 100vw;
     height: auto;
@@ -20,7 +23,7 @@ html{
 }
 
 .abouttext h1 {
-    font-size: 3rem;
+    font-size: 2.75rem;
     font-family: technical;
     
 }
