--- a/public/baani.css
+++ b/public/baani.css
@@ -2,11 +2,56 @@
     margin: 0;
     padding: 0;
     font-family: Poppins,sans-serif;
-    box-sizing: border-box;
+    box-sizing: border-box;;
+}
+body{
+    background-color: black;
 }
 
 
 
+@font-face {
+  font-family: technopath;
+  src: url(fonts/Technopath.otf);
+}
+
+.navbar {
+  width: 100%;
+  height: 15%;
+  background-color: black;
+}
+
+.navbar .navbar-nav .nav-item a {
+  padding: 30px;
+}
+
+.nav-item {
+  font-size: 130%;
+  font-family: technopath;
+  margin-right: 5%;
+}
+
+.nav-link {
+  color: white !important;
+}
+.navbar-toggler {
+  color: white !important;
+}
+.navbar-toggler-icon {
+  color: aliceblue !important;
+  background-color: aliceblue;
+}
+
+.nav-link:hover {
+  color: #d246d2 ! important;
+  
+}
+
+.navbar-brand {
+  font-family: technopath;
+}
+
+/* ********************************************************* */
 @font-face {
     font-family: technopath;
     src: url("fonts/Technopath.otf");
@@ -17,6 +62,7 @@
 }
 
 .events-title {
+    /* margin-top: 5vw; */
     font-family: pristina;
     color: white;
     align-self:  center;
@@ -106,13 +152,13 @@
 .date{
     /* height:4vh; */
     width: 7vw;
-    border:2px solid green;
+    border:2px solid white;
     border-radius: 15px;
     text-align: center;
     text-justify: center;
     margin-top: 1.5vh;
     margin-bottom: 1vh;
-    box-shadow: 2px green;
+    /* box-shadow: 2px green; */
 }
 
 @keyframes scroll {
@@ -127,9 +173,16 @@
 .timeline:hover .container {
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
     transform: scale(1.05);
-    animation-play-state: paused;
+    /* animation-play-state: paused; */
    }
 
+
+/* **********paused */
+/* .container:hover {
+    .timeline{
+    animation-play-state: paused;}
+
+} */
 
 @keyframes movedown {
     0%{
@@ -717,3 +770,635 @@
         left: 3%;
     }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.contact-us {
+    height: 100%;
+    width: 100%;
+    background-color: #0f0f0f;
+    display: flex;
+    padding: 2vw 4vw;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.333);
+  }
+  .left {
+    /* height: 65%; */
+    width: 50%;
+    background-color: #0f0f0f;
+    display: flex;
+    padding: 1vw 0;
+  }
+  .left h2 {
+    font-size: 4.6vw;
+    line-height: 4.3vw;
+    text-transform: capitalize;
+    font-family: "Poppins";
+    font-weight: 600;
+    letter-spacing: -2px;
+  }
+  .right {
+    height: 100%;
+    width: 50%;
+    background-color: #0f0f0f;
+  }
+  .msg h5 {
+    color: #9e9e9e;
+    font-weight: 600;
+    font-size: 0.9vw;
+    padding-bottom: 0.7vw;
+  }
+  .email {
+    border: 1px white solid;
+    width: fit-content;
+    padding: 2px 9px;
+    border-radius: 50px;
+    font-size: 1.1vw;
+  }
+  
+  .subscribe h3 {
+    font-weight: 600;
+    font-size: 1.2vw;
+  }
+  
+  .msg {
+    padding-top: 3vw;
+  }
+  .msg .email:hover {
+    cursor: pointer;
+  }
+  
+  .right {
+    display: flex;
+    flex-direction: column;
+    padding-left: 15vw;
+  }
+  .inputbox {
+    position: relative;
+    width: 275px;
+  }
+  
+  .inputbox input {
+    background: transparent;
+    width: 100%;
+    height: 30px;
+    color: white;
+    border: none;
+    outline: none;
+    box-shadow: none;
+    font-size: 17px;
+    letter-spacing: 1px;
+    padding: 10px 0 5px;
+    padding-bottom: 8px;
+  }
+  .inputbox span {
+    position: absolute;
+    left: 0;
+    padding: 2px 0 5px;
+    color: rgba(255, 255, 255, 0.5);
+    text-transform: uppercase;
+    pointer-events: none;
+    letter-spacing: 1px;
+    transition: 0.5s;
+  }
+  
+  .inputbox input:valid ~ span,
+  .inputbox input:focus ~ span {
+    color: #ffffff;
+    transform: translateY(-18px);
+    font-size: 11px;
+  }
+  
+  .inputbox i {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background: #fff;
+    height: 2px;
+    width: 100%;
+    overflow: hidden;
+  }
+  .inputbox i::before {
+    content: "";
+    position: absolute;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(90deg, #ff1b69, #ff0, #2196f3, #9c27b0, #ff1b69);
+    animation: animate-hoja 2s linear infinite;
+    transition: 0.5s;
+  }
+  inputbox input:valid ~ i::before,
+  .inputbox input:focus ~ i::before {
+    left: 0;
+  }
+  @keyframes animate-hoja {
+    0% {
+      background-position-x: 0;
+    }
+    100% {
+      background-position-x: 275px;
+    }
+  }
+  
+  .query {
+    padding-top: 3vw;
+    padding-bottom: 3vw;
+  }
+  .query .query-input {
+    position: relative;
+    width: 300px;
+    height: 120px; /* increased height */
+    border: 1px white solid;
+  }
+  
+  .query .query-input textarea {
+    background: transparent;
+    width: 100%;
+    height: 100%;
+    color: white;
+    border: none;
+    outline: none;
+    box-shadow: none;
+    font-size: 1vw;
+    letter-spacing: 1px;
+    padding: 10px;
+    resize: none;
+  }
+  
+  .query .query-input span {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    padding: 2px 0 5px;
+    color: rgba(255, 255, 255, 0.5);
+    text-transform: uppercase;
+    pointer-events: none;
+    letter-spacing: 1px;
+    transition: 0.5s;
+    font-size: 1vw;
+  }
+  
+  .query .query-input textarea:focus + span {
+    top: -20px; /* move the span above the textarea */
+    font-size: 11px;
+    color: #ffffff;
+  }
+  
+  .query .query-input textarea:focus {
+    box-shadow: 0 0 10px #fff;
+    border: 2px solid #fff;
+  }
+  
+  .query .query-input textarea:focus::-webkit-input-placeholder {
+    color: transparent;
+  }
+  
+  .query .query-input textarea:focus::-moz-placeholder {
+    color: transparent;
+  }
+  
+  .query .query-input textarea:focus:-ms-input-placeholder {
+    color: transparent;
+  }
+  
+  .query .query-input textarea:focus::placeholder {
+    color: transparent;
+  }
+  
+  .query .query-input textarea:focus {
+    animation: glow 2s linear infinite;
+  }
+  
+  @keyframes glow {
+    0% {
+      box-shadow: 0 0 10px red;
+    }
+    100% {
+      box-shadow: 0 0 20px red;
+    }
+  }
+  
+  button.send {
+    position: relative;
+    padding: 10px 20px;
+    border: 1px solid rgb(61, 106, 255);
+    border: 1px solid #d246d2;
+    border-radius: 30px;
+    font-size: 1vw;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-family: "Poppins";
+    letter-spacing: 2px;
+    background: transparent;
+    color: #fff;
+    overflow: hidden;
+    box-shadow: 0 0 0 0 transparent;
+    -webkit-transition: all 0.2s ease-in;
+    -moz-transition: all 0.2s ease-in;
+    transition: all 0.2s ease-in;
+  }
+  button.send {
+    width: fit-content;
+    margin-bottom: 1vw;
+  }
+  
+  button.send:hover {
+    background: rgb(61, 106, 255);
+    background: #d246d2;
+    box-shadow: 0 0 30px 5px rgba(236, 0, 224, 0.815);
+    -webkit-transition: all 0.2s ease-out;
+    -moz-transition: all 0.2s ease-out;
+    transition: all 0.2s ease-out;
+  }
+  
+  button.send:hover::before {
+    -webkit-animation: sh02 0.5s 0s linear;
+    -moz-animation: sh02 0.5s 0s linear;
+    animation: sh02 0.5s 0s linear;
+  }
+  
+  button.send::before {
+    content: "";
+    display: block;
+    width: 0px;
+    height: 86%;
+    position: absolute;
+    top: 7%;
+    left: 0%;
+    opacity: 0;
+    background: #fff;
+    box-shadow: 0 0 50px 30px #fff;
+    -webkit-transform: skewX(-20deg);
+    -moz-transform: skewX(-20deg);
+    -ms-transform: skewX(-20deg);
+    -o-transform: skewX(-20deg);
+    transform: skewX(-20deg);
+  }
+  
+  @keyframes sh02 {
+    from {
+      opacity: 0;
+      left: 0%;
+    }
+  
+    50% {
+      opacity: 1;
+    }
+  
+    to {
+      opacity: 0;
+      left: 100%;
+    }
+  }
+  
+  button.send:active {
+    box-shadow: 0 0 0 0 transparent;
+    -webkit-transition: box-shadow 0.2s ease-in;
+    -moz-transition: box-shadow 0.2s ease-in;
+    transition: box-shadow 0.2s ease-in;
+  }
+  
+  .left {
+    position: relative;
+  }
+  .chotu {
+    background-color: red;
+    height: 7vw;
+    width: 7vw;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    z-index: 99;
+    transform: scale(0);
+    transform: translate(-50%, -50%) scale(0);
+    transform-origin: center;
+    pointer-events: none;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+  }
+  .chotu {
+    font-weight: 600;
+    font-size: 1.1vw;
+  }
+  .ani {
+    position: relative;
+    cursor: pointer;
+    height: fit-content;
+    width: fit-content;
+    overflow: hidden;
+    display: inline-block;
+    height: fit-content;
+  }
+  
+  .prefooter {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    color: white;
+    font-family: "Poppins";
+    height: auto;
+  }
+  *::selection {
+    color: black;
+    background-color: white;
+  }
+  
+  /******************************footer********************************* */
+  .footer11 {
+    height: auto;
+  }
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  *::selection {
+    background-color: white;
+    color: black;
+  }
+  @font-face {
+    font-family: Techi;
+    src: url(fonts/TechnicalDrawing.ttf);
+  }
+  
+  footer {
+    background-color: #111110;
+    height: 56%;
+    position: relative;
+  }
+  
+  #imgpara {
+    width: 30vw;
+    /* height: 30vw; */
+    margin-left: 4vw;
+    margin-top: 3.2vw;
+    float: left;
+  }
+  #img {
+    background-image: url(pictures/CybernautsLogo.jpeg);
+    width: 5.7vw;
+    height: 5.7vw;
+    background-size: contain;
+    border-radius: 50%;
+  }
+  
+  .logo {
+    display: flex;
+    align-items: center;
+    gap: 1vw;
+    text-transform: uppercase;
+    font-family: "Poppins";
+    font-size: 1.75vw;
+    color: white;
+    position: relative;
+  }
+  .logo i {
+    position: absolute;
+    z-index: -1;
+    /* left: 0; */
+    top: 25%;
+    transform: translate(-50%);
+    color: #9e9e9e;
+    opacity: 0.6;
+    font-size: 3vw;
+  }
+  .flame {
+    position: absolute;
+    bottom: -0.5vw;
+    left: 28%;
+    rotate: 45deg;
+    transform: translateX(-50%);
+    width: 1vw;
+    height: 2vw;
+    background: linear-gradient(to bottom, yellow, red);
+    border-radius: 20%;
+    animation: flame-animation 0.7s infinite alternate;
+    z-index: -1;
+  }
+  
+  @keyframes flame-animation {
+    from {
+      transform: translateX(-50%) scaleY(1);
+      opacity: 0.9;
+    }
+    to {
+      transform: translateX(-50%) scaleY(0.8);
+      opacity: 0.6;
+    }
+  }
+  .logo h3 {
+    font-weight: 500;
+    z-index: 1;
+  }
+  .logo span {
+    color: #d246d2;
+  }
+  
+  #para {
+    height: 7vw;
+    width: 22vw;
+    padding-top: 1.5vw;
+    color: white;
+    font-family: Poppins;
+    font-size: 0.9vw;
+  }
+  h5 {
+    color: #9e9e9e;
+    font-family: "Poppins";
+    font-size: 1.17vw;
+    font-weight: 600;
+    padding-bottom: 1vw;
+  }
+  #links1 h5,
+  #links2 h5,
+  #links3 h5 {
+    color: #9e9e9e;
+  }
+  #links1 ul,
+  #links2 ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+  }
+  
+  #links2 h5 {
+    text-align: left;
+  }
+  #links3 h5 {
+    text-align: left;
+  }
+  #links1 {
+    /* width: 250px;
+        height: 450px; */
+  
+    float: left;
+    margin-top: 2vw;
+    margin-left: 6vw;
+    margin-right: 6vw;
+  }
+  
+  li {
+    list-style: none;
+    line-height: 3.7vw;
+    font-size: 1.05vw;
+    font-family: "Poppins";
+    color: #ffffff;
+    text-transform: capitalize;
+  }
+  #links1 li,
+  #links2 li {
+    text-align: left;
+    font-weight: 400;
+  }
+  #links2 {
+    /* width: 300px;
+        height: 450px; */
+  
+    float: left;
+    margin-top: 2vw;
+    margin-left: 6vw;
+    margin-right: 6vw;
+  }
+  
+  #links3 {
+    /* width: 200px;
+        height: 450px; */
+  
+    float: left;
+    margin-top: 2vw;
+    margin-left: 6vw;
+  }
+  
+  #links3 li i {
+    width: 2.5vw;
+    text-align: center;
+  }
+  #links3 ul {
+    padding: 0;
+    list-style: none;
+  }
+  #links1 li a,
+  #links2 li a,
+  #links3 li a {
+    text-decoration: none;
+    color: white;
+  }
+  #links3 ul {
+    display: flex;
+    flex-direction: column;
+  }
+  #links3 ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+  }
+  #links3 li {
+    text-align: center;
+  }
+  #links3 a {
+    text-decoration: none;
+    color: white;
+    font-size: 1.05vw;
+    display: flex;
+    align-items: center;
+  }
+  #links3 a span {
+    margin-left: 1vw;
+  }
+  .fa-brands {
+    font-size: 1.75vw;
+  }
+  #icons {
+    text-decoration: none;
+  }
+  #bottomline1 {
+    width: 70%;
+    /* height: 50px; */
+  
+    /* bottom: 120px;
+        position: absolute;
+        right: 250px; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1vw;
+    color: #f1b2f2;
+    letter-spacing: 2.26px;
+    padding-top: 1.5vw;
+    font-family: "Techi";
+  }
+  #bottomline2 {
+    width: 500px;
+    /* height: 50px; */
+  
+    /* bottom: 20px;
+        position: absolute;
+        right: 530px; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.9vw;
+    color: #ffffff;
+    padding-top: 1.7vw;
+    font-family: "Poppins";
+  }
+  .line {
+    height: 1px;
+    width: 92%;
+    background-color: rgba(125, 125, 125, 0.616);
+    color: white;
+    position: absolute;
+    left: 4%;
+    top: 87.5%;
+  }
+  #links3 i {
+    color: #d246d2;
+  }
+  #links3 i:hover {
+    scale: 1.1;
+    transition: 0.2s all ease;
+  }
+  
+  #links3 a {
+    text-decoration: none;
+    color: white;
+    font-size: 1.05vw;
+    display: flex;
+    align-items: center;
+    transition: transform 0.3s ease-out; /* Add transition for scaling */
+  }
+  
+  #links3 a:hover {
+    transform: scale(1.1); /* Scale the icon on hover */
+  }
+  
+  #links3 a i {
+    transition: color 0.3s ease-out; /* Add transition for color change */
+  }
+  
+  #links3 a:hover i {
+    color: #ff1b69; /* Change icon color on hover */
+  }
+  
