--- a/public/vision.css
+++ b/public/vision.css
@@ -3,6 +3,60 @@
     padding: 0;
     
 }
+  
+  
+  
+  @font-face {
+    font-family: technopath;
+    src: url(fonts/Technopath.otf);
+  }
+  
+  .navbar {
+    width: 100%;
+    height: 15%;
+    background-color: black;
+  }
+  
+  .navbar .navbar-nav .nav-item a {
+    padding: 30px;
+  }
+  
+  .nav-item {
+    font-size: 130%;
+    font-family: technopath;
+    margin-right: 5%;
+  }
+  
+  .nav-link {
+    color: white !important;
+  }
+  .navbar-toggler {
+    color: white !important;
+  }
+  .navbar-toggler-icon {
+    color: aliceblue !important;
+    background-color: aliceblue;
+  }
+  
+  .nav-link:hover {
+    color: #d246d2 ! important;
+    
+  }
+  
+  .navbar-brand {
+    font-family: technopath;
+  }
+
+
+
+
+
+
+
+
+
+
+/* ********************************************** */
 #VM {
     /* height: 100vh;
     width: 100vw;
