--- a/public/baani.css
+++ b/public/baani.css
@@ -230,6 +230,7 @@ body{
     background-size: contain;
     background-repeat: no-repeat;
     background-position: bottom;
+    width: 50%;
     box-shadow: -8px 8px 6px #75187d, -13px 13px 6px  #eb7130 
     /* box-shadow: -10px 10px 5px lightblue inset; */
     /* box-shadow: -5px 0px 2px  blue, 0px -10px 8 */
@@ -289,6 +290,7 @@ body{
     background-size: contain;
     background-repeat: no-repeat;
     background-position: bottom;
+    width: 50%;
     box-shadow: -8px 8px 6px #75187d, -13px 13px 6px  #eb7130 
 }
 .text-box4{
@@ -319,6 +321,7 @@ body{
     background-size: contain;
     background-repeat: no-repeat;
     background-position: bottom;
+    width: 50%;
     box-shadow: -8px 8px 6px #75187d, -13px 13px 6px  #eb7130 
 }
 .text-box6{
@@ -357,6 +360,7 @@ body{
 }
 .left-container{
     left: 0;
+    
 }
 .right-container{
     left: 50%;
