Added strong tag to HOD sir name

--- a/public/ritesh.css
+++ b/public/ritesh.css
@@ -126,15 +126,44 @@ body{
 
 
 
-
 /* <!-- Faculty Information --> */
-.faculty{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(1rem, 32rem));
-    justify-content: space-evenly;
-    align-items: center;
+/* //Flipping the image of faculty when hovered */
+.faculty {
+  display: grid;
+  gap: 40rem;
+  margin: 5% auto;
+  grid-template-columns: repeat(auto-fit, minmax(1rem, 32rem));
+  justify-content: space-evenly;
+  align-items: center;
+  margin-bottom: 50rem;
 }
-/* Container to center the image and make it responsive */
+
+.flip-container {
+  perspective: 1000px;
+  width: 100%;
+  margin: 0 auto;
+
+}
+
+.flipper {
+  position: absolute;
+  width: 100%;
+  padding-top: 110%;
+  padding-bottom: 5%;
+  transform-style: preserve-3d;
+  transition: transform 1s;
+}
+.front, .back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+}
 .responsive-container {
   display: flex;
   justify-content: center;
@@ -143,37 +172,58 @@ body{
   height: auto;
 }
 
+.front {
+  transform: rotateY(0deg);
+}
+
+.back {
+  transform: rotateY(180deg);
+}
+
+.flip-container:hover .flipper {
+  transform: rotateY(360deg);
+}
+
+.responsive-image{
+  mix-blend-mode: luminosity;
+}
+.white_text{
+  color: whitesmoke;
+}
+
 /* Media Queries for specific adjustments */
 @media (max-width: 1200px) {
-  .responsive-image {
-    max-width: 80%;
-  }
+.responsive-image {
+max-width: 80%;
+}
 }
 
 @media (max-width: 992px) {
-  .responsive-image {
-    max-width: 70%;
-  }
+.responsive-image {
+max-width: 70%;
+}
 }
 
 @media (max-width: 768px) {
-  .responsive-image {
-    max-width: 60%;
-  }
+.responsive-image {
+max-width: 60%;
+}
 }
 
 @media (max-width: 576px) {
-  .responsive-image {
-    max-width: 50%;
-  }
+.responsive-image {
+max-width: 50%;
+}
 }
 
 @media (max-width: 400px) {
-  .responsive-image {
-    max-width: 40%;
-  }
+.responsive-image {
+max-width: 40%;
+}
 }
 
+
+/* //Flipping the image of faculty when hovered */
 /* <!-- Faculty Information --> */
 
 
