--- a/public/index.css
+++ b/public/index.css
@@ -274,13 +274,15 @@ nav ul {
   gap: 4.5vw;
   justify-content: space-evenly;
 }
-nav ul li {
+nav ul li a {
   font-size: 1.6vw;
   font-family: Technopath;
   list-style: none;
   transition: all 0.5s ease;
+  color: white;
+  text-decoration: none;
 }
-nav ul li:hover {
+nav ul li a:hover {
   color: #d246d2;
 }
 body,
